# deepagent-tui

./: .gitignore  CLAUDE.md  README.md  example.env  pyproject.toml
.claude/skills/commit/: SKILL.md
docs/: README.md  architecture.md  cli.md  commands.md  configuration.md  hitl.md  images.md  input.md  keybindings.md  server-middleware.md  skills.md  testing.md  themes.md  threads.md  tool-widgets.md  troubleshooting.md  workspace-root.md
src/deepagent_repl/: cli.py  client.py  config.py  session.py
src/deepagent_repl/commands/: builtins.py  export.py  fork.py  model.py  resume.py  skills.py  theme.py
src/deepagent_repl/tui/: __init__.py  app.py  inline_approval.py  screens.py
src/deepagent_repl/ui/: markdown.py  renderer.py  theme.py  tool_widgets.py
src/deepagent_repl/utils/: images.py
src/deepagent_tui/: __init__.py  __main__.py  bootstrap.py  cli.py  client.py  config.py  session.py
src/deepagent_tui/cli/: __init__.py  output.py  runner.py
src/deepagent_tui/commands/: __init__.py  builtins.py  compact.py  copy.py  export.py  fork.py  help.py  new.py  resume.py  rewind.py  settings.py  skills.py  theme.py  threads.py
src/deepagent_tui/handlers/: interrupt.py  stream.py  tools.py
src/deepagent_tui/storage/: config_store.py  db.py
src/deepagent_tui/tui/: __init__.py  app.py  inline_approval.py  screens.py
src/deepagent_tui/ui/: markdown.py  prompt.py  renderer.py  theme.py  thinking.py  tool_widgets.py  toolbar.py
tests/: test_cli_smoke.py  test_settings_modal.py  test_storage_scoping.py  test_stream_handler.py  test_tui_smoke.py
(+2 files in other folders)
